package org.calamarfederal.messyink.feature_counter.presentation.counter_overview

/**
 * Identifying test tags for finding nodes in tests
 */
object CounterOverviewTestTags {
    /**
     * Floating action button which begins 'create counter'
     */
    const val CreateCounterFab = "create-counter-fab"

    /**
     * Scrollable list of [CounterItem]
     */
    const val CountersContainer = "list-of-counters"

    /**
     * The composable which represents a counter
     */
    const val CounterItem = "counter-item"

    /**
     * The popup / dialog which shows the extra options / actions on a counter
     */
    const val CounterOptions = "counter-options"
}
